feat: Phase 0 - Gemini/Groq LLM, Supabase persistence, Trade Scanner (Nifty 500), Settings page, Portfolio pie chart
- Replace HuggingFace with Gemini 2.0 Flash + Groq fallback (api/index.py)
- Add CORS middleware to FastAPI backend
- Migrate portfolio/watchlist from localStorage to Supabase (PortfolioContext.tsx)
- Fix onboarding: save assets/watchlist/risk to correct Supabase tables
- Add supabase_portfolio_schema.sql (user_portfolio, user_watchlist, user_settings)
- Build Trade Scanner: 7 algorithms on Nifty 500 universe (api/scanner.py)
  - Intraday: ORB, Supertrend+EMA
  - Swing: 52W Breakout, RSI Bounce, EMA 9/21 Cross, BB Squeeze (TTM)
  - Long-term: Quality Value Score (ROE/D-E/EPS filters)
- Add /trades page replacing /news with premium scanner UI
- Add full Settings page (risk tolerance, lot size, notifications, broker placeholder)
- Enhance Portfolio page with allocation pie chart + P&L breakdown cards
- Fix NEXT_PUBLIC_TENALI_API_URL missing /api/py prefix (root cause of all fetch errors)
- Update vercel.json: Python 3.12 runtime, 60s maxDuration
- Fix NSE market status with official 2025-2026 holiday calendar
- Wire journal analysis to real Gemini API (TenaliAnalysis.tsx)

--- a/finos-app/requirements.txt
+++ b/finos-app/requirements.txt
@@ -6,4 +6,5 @@ pandas==2.2.0
 yfinance==0.2.36
 python-multipart==0.0.7
 pytz==2024.1
-google-generativeai==0.3.2
+# Removed google-generativeai SDK — now using direct REST API calls to Gemini
+# Groq is accessed via REST API too — no SDK needed
