--- a/finos-app/vercel.json
+++ b/finos-app/vercel.json
@@ -4,5 +4,11 @@
             "source": "/api/py/:path*",
             "destination": "/api/index.py"
         }
-    ]
+    ],
+    "functions": {
+        "api/index.py": {
+            "runtime": "python3.12",
+            "maxDuration": 60
+        }
+    }
 }
