--- a/finos-app/vercel.json
+++ b/finos-app/vercel.json
@@ -1,13 +1,3 @@
 {
-    "rewrites": [
-        {
-            "source": "/api/py/:path*",
-            "destination": "/api/index"
-        }
-    ],
-    "functions": {
-        "api/index.py": {
-            "maxDuration": 60
-        }
-    }
+    "rewrites": []
 }
